2011-03-16  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        [Qt] Some inspector test fail intermittently
        https://bugs.webkit.org/show_bug.cgi?id=42090

        Unskip a bunch of non-http inspector tests on Qt. All these tests pass locally.

        * platform/qt/Skipped:

2011-03-16  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Add failing tests to the Skipped list.

        * platform/qt/Skipped:
         - Add fast/forms/input-autofilled.html because of missing layoutTestController.setAutofilled().
         - Add fast/workers/shared-worker-frame-lifecycle.html because it is still flakey. (bug 34281)

2011-03-15  Adam Roben  <aroben@apple.com>

        Fix bug number typo

        * platform/win/Skipped:

2011-03-15  Adam Roben  <aroben@apple.com>

        Skip an asserting test on Windows

        <http://webkit.org/b/56047> tracks the failure.

        * platform/win/Skipped: Added editing/style/iframe-onload-crash.html.

2011-03-15  David Levin  <levin@chromium.org>

        Fix few more baselines (which the tool didn't handle well before due to them
        being in the mac-leopard directory).
          svg/w3c due to r81168
          svg/custom/mouse due to r81053

        * platform/chromium-mac-leopard/svg/W3C-SVG-1.1-SE/pservers-grad-17-b-expected.checksum:
        * platform/chromium-mac-leopard/svg/W3C-SVG-1.1-SE/pservers-grad-17-b-expected.png:
        * platform/chromium-mac-leopard/svg/W3C-SVG-1.1-SE/pservers-grad-20-b-expected.checksum: Removed.
        * platform/chromium-mac-leopard/svg/W3C-SVG-1.1-SE/pservers-grad-20-b-expected.png: Removed.
        * platform/chromium-mac-leopard/svg/custom/mouse-move-on-svg-container-expected.checksum: Removed.
        * platform/chromium-mac-leopard/svg/custom/mouse-move-on-svg-container-expected.png: Removed.
        * platform/chromium-mac-leopard/svg/custom/mouse-move-on-svg-container-standalone-expected.checksum: Removed.