@@ -498,9 +498,6 @@ http/tests/loading/gmail-assert-on-load.html
 http/tests/loading/redirect-with-no-location-crash.html
 http/tests/loading/text-content-type-with-binary-extension.html
 
-# https://bugs.webkit.org/show_bug.cgi?id=56370
-http/tests/media/video-play-stall-before-meta-data.html
-
 http/tests/media/video-play-stall-seek.html
 http/tests/media/video-play-stall.html
 http/tests/media/video-seekable-stall.html
