@@ -1,3 +1,15 @@
+2011-03-15  Philippe Normand  <pnormand@igalia.com>
+
+        Reviewed by Eric Carlson.
+
+        [GStreamer] http/tests/media/video-play-stall-before-meta-data.html fails
+        https://bugs.webkit.org/show_bug.cgi?id=56370
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
+        (WebCore::mediaPlayerPrivateMessageCallback): Let the
+        mediaPlayerClient handle the stream error, in this case the
+        HTMLMediaElement will emit a stalled event.
+
 2011-03-10  Philippe Normand  <pnormand@igalia.com>
 
         Reviewed by Martin Robinson.
