@@ -1,3 +1,12 @@
+2011-03-15  Philippe Normand  <pnormand@igalia.com>
+
+        Reviewed by Eric Carlson.
+
+        [GStreamer] http/tests/media/video-play-stall-before-meta-data.html fails
+        https://bugs.webkit.org/show_bug.cgi?id=56370
+
+        * platform/gtk/Skipped: Unskip fixed test.
+
 2011-03-16  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Pavel Feldman.
